Bug 414615 - Crash on pasting a sequence diagram elements
Summary: Crash on pasting a sequence diagram elements
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.3 (KDE Applications 19.08.3)
Platform: Other All
: NOR crash
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-28 14:53 UTC by Ralf Habacker
Modified: 2019-12-02 23:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.90 (KDE Applications 19.11.90)
Sentry Crash Report:


Attachments
Example file (1.60 KB, text/plain)
2019-11-28 14:53 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-28 14:53:46 UTC
Created attachment 124158 [details]
Example file

STEPS TO REPRODUCE
1. start umbrello
2. add a new sequence diagram
3. Import the attached file by right-clicking on the diagram background and selecting New->From File.
4. copy all imported elements to clipboard
5. add an additional sequence diagram
6. paste clipboard content

OBSERVED RESULT
umbrello crashes

EXPECTED RESULT
umbrello should not crash 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2019-11-28 14:56:55 UTC
Git commit 701ba94f4bf28521eec50fc1f2461b8236cade4a by Ralf Habacker.
Committed on 28/11/2019 at 14:56.
Pushed by habacker into branch 'release/19.12'.

Fix 'Crash on pasting a sequence diagram elements'

The crash was caused by accessing a class instance that no longer existed.
FIXED-IN: 2.30.0 (KDE Applications 19.12.0)

M  +1    -1    umbrello/umlwidgets/messagewidget.h

https://invent.kde.org/kde/umbrello/commit/701ba94f4bf28521eec50fc1f2461b8236cade4a