Fix 'Crash on pasting a sequence diagram elements'

The crash was caused by accessing a class instance that no longer existed.

BUG:414615
FIXED-IN: 2.30.0 (KDE Applications 19.12.0)